--- a/src/pro/styles/ProActivitySubscribers.css
+++ b/src/pro/styles/ProActivitySubscribers.css
@@ -460,3 +460,24 @@
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+.ProActivitySubscribers-breadcrumb {
+  font-size: 24px; /* Augmente la taille */
+  font-weight: bold; /* En gras */
+  margin-bottom: 20px;
+}
+
+.ProActivitySubscribers-breadcrumb a {
+  color: black; /* Noir pour Home et Pro */
+  text-decoration: none;
+  margin-right: 5px;
+}
+
+.ProActivitySubscribers-breadcrumb a.active {
+  color: #E1604D; /* Orange pour Profil */
+  text-decoration: underline;
+}
+
+.ProActivitySubscribers-breadcrumb a:hover {
+  text-decoration: underline; /* Souligne sur hover */
+}
