--- a/src/pro/styles/ProChooseContractPage.css
+++ b/src/pro/styles/ProChooseContractPage.css
@@ -7,7 +7,7 @@
 }
 
 .ChooseContract-form-container {
-  width: 60%;
+  /* width: 60%; */
   margin: 0 auto;
   background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
