--- a/src/pro/styles/ProProfile.css
+++ b/src/pro/styles/ProProfile.css
@@ -1,21 +1,25 @@
-/* ../styles/pages/ProProfile.css */
-
-.button-box {
-  background-color: white;
-  padding: 20px;
-  width: 70%;
-  margin: 0 auto;
-  border-radius: 15px;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+/* Container principal */
+.proProfile-container {
+  display: flex;
+  justify-content: center; /* Centre horizontalement le conteneur */
+  align-items: center; /* Centre verticalement le conteneur */
+  padding: 1%;
+  width: 86%;
+  margin-left: auto; /* Centrer horizontalement le conteneur dans la page */
+  box-sizing: border-box; /* Assure que padding soit pris en compte dans la largeur */
 }
 
-.centered-box {
+/* Centrer la box */
+.proProfile-centered-box {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 2;
+  margin-left: 20px; /* Ajouter de l'espace à gauche de la box */
 }
 
-.banner {
+/* Style de la bannière */
+.proProfile-banner {
   background-color: #E1604D;
   color: white;
   text-align: center;
@@ -25,40 +29,58 @@
   font-weight: bold;
   width: 250px;
   height: 50px;
-  display: flex; /* Add this line */
-  justify-content: center; /* Add this line */
-  align-items: center; /* Add this line */
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Add this line */
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
- }
-
-.button-container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  margin-top: 20px;
+  align-items: center;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
 }
 
-.button {
+/* Box pour afficher le contenu */
+.proProfile-content-box {
+  background-color: white;
+  border-radius: 15px;
+  width: 100%;
+  min-height: 900px;
+}
+
+/* Boutons alignés en colonne sur la gauche */
+.proProfile-button-container-left {
+  display: flex;
+  flex-direction: column; /* Aligner en colonne */
+  justify-content: flex-start;
+  align-items: flex-start; /* Aligner les boutons à gauche */
+  gap: 15px; /* Espacement entre les boutons */
+  margin-right: 20px;
+}
+
+/* Style des boutons */
+.proProfile-button {
   width: 150px;
-  height: 150px;
+  height: 50px;
   background-color: #E1604D;
   border: none;
   border-radius: 15px;
-  margin: 15px;
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
   cursor: pointer;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
 }
 
-.Profile-back-button {
+.proProfile-button:hover {
+  background-color: #D15040;
+}
+
+/* Bouton retour */
+.proProfile-back-button {
   align-self: flex-start;
   margin: 10px;
 }
 
-.Profile-back-button button {
+.proProfile-back-button button {
   padding: 5px 10px;
   background-color: #E1604D;
   color: white;
@@ -69,113 +91,18 @@
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
-.Profile-back-button button:hover {
+.proProfile-back-button button:hover {
   background-color: #D15040;
 }
 
-/* ###################################################### */
-
-.input-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-top: 20px;
+/* Style du bouton sélectionné */
+.proProfile-button-selected {
+  background-color: #E9AD8C; /* Couleur différente pour le bouton sélectionné */
+  color: #881100;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4);
 }
 
-.input-group {
-  display: flex;
-  align-items: center;
-  margin-bottom: 15px;
-}
-
-.label-column {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin-right: 5px;
-  width: 50px;
-}
-
-.input-column {
-  flex: 2;
-  margin-right: 100px; /* Ajouter de l'espace à droite */
-}
-
-.input-wrapper {
-  display: flex;
-  align-items: center;
-}
-
-.input-wrapper label {
-  font-weight: bold;
-  margin-right: 10px;
-}
-
-.input-wrapper input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 100%;
-}
-
-/* ############################################## */
-
-.edit-button {
-  padding: 5px 10px;
-  background-color: #E1604D;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.edit-button:hover {
-  background-color: #D15040;
-}
-
-.edit-all-button {
-  padding: 5px 10px;
-  background-color: #E1604D;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: bold;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2); /* Ajoutez ici l'ombre */
-}
-
-.edit-all-button:hover {
-  background-color: #D15040;
-}
-
-.editable-field {
-  border: 1px solid blue; /* Modifier le style de contour comme vous le souhaitez */
-  /* Autres styles que vous souhaitez appliquer en mode édition */
-}
-
-.center-content {
-  display: flex;
-  justify-content: center;
-  width: 100%; /* Assurez-vous que le conteneur prend toute la largeur disponible */
-}
-
-.back-button {
-  align-self: flex-start;
-  margin: 10px;
-}
-
-.back-button button {
-  padding: 5px 10px;
-  background-color: #E1604D;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: bold;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
-}
-
-.back-button button:hover {
-  background-color: #D15040;
+.proProfile-button-selected:hover {
+  background-color: #C17F6D; /* Couleur plus foncée ou différente au survol */
+  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.5); /* Ombrage plus prononcé au survol */
 }
