--- a/src/pro/styles/ProMenu.css
+++ b/src/pro/styles/ProMenu.css
@@ -7,8 +7,8 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
   color: white;
-  width: 150px;
-  height: 50px;
+  width: auto;
+  height: 40px;
   font-size: 20px;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   margin: 1%;
@@ -131,7 +131,6 @@
 .ProMenu-form-container {
   width: 60%;
   margin: 0 auto;
-  background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
   border-radius: 10px;
