--- a/src/styles/pages/manageAvatar.css
+++ b/src/styles/pages/manageAvatar.css
@@ -41,7 +41,6 @@
 }
 
 .manageAvatar-casesSvg {
-  background: #F4F6F9;
   /* Couleur de fond */
   display: flex;
   justify-content: center;
@@ -55,7 +54,6 @@
   align-items: center;
   /* Centre les éléments verticalement */
 
-  background: #FFFFFF;
   box-shadow: -228px 0px 91px rgba(0, 0, 0, 0.01), -128px 0px 77px rgba(0, 0, 0, 0.03), -57px 0px 57px rgba(0, 0, 0, 0.04), -14px 0px 31px rgba(0, 0, 0, 0.05);
   border-radius: 25px;
 
@@ -148,7 +146,6 @@
   height: 450px;
   margin-top: 15%;
   margin-right: 5%;
-  background: #FFFFFF;
   box-shadow: 0px 198px 79px rgba(0, 0, 0, 0.01), 0px 112px 67px rgba(0, 0, 0, 0.03), 0px 50px 50px rgba(0, 0, 0, 0.04), 0px 12px 27px rgba(0, 0, 0, 0.05);
   border-radius: 25px;
 }
@@ -160,7 +157,6 @@
   padding: 2%;
   width: 70%;
 
-  background: #FFFFFF;
   box-shadow: 0px 198px 79px rgba(0, 0, 0, 0.01), 0px 112px 67px rgba(0, 0, 0, 0.03), 0px 50px 50px rgba(0, 0, 0, 0.04), 0px 12px 27px rgba(0, 0, 0, 0.05);
   border-radius: 25px;
   max-height: 660px;
@@ -178,7 +174,6 @@
   width: 100%;
   padding-top: 1%;
   padding-bottom: 1%;
-  background: #FFFFFF;
   box-shadow: -228px 0px 91px rgba(0, 0, 0, 0.01), -128px 0px 77px rgba(0, 0, 0, 0.03), -57px 0px 57px rgba(0, 0, 0, 0.04), -14px 0px 31px rgba(0, 0, 0, 0.05);
   border-radius: 25px;
 }
@@ -202,7 +197,6 @@
 .manageAvatar-form-container {
   /* width: 70%; */
   margin: 0 auto;
-  background-color: white;
   padding: 20px;
   border-radius: 10px;
 }
@@ -222,4 +216,24 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
   padding: 5px 10px 5px 10px;
+}
+
+.manageAvatar-breadcrumb {
+  font-size: 24px; /* Augmente la taille */
+  font-weight: bold; /* En gras */
+  margin-bottom: 20px;
+}
+
+.manageAvatar-breadcrumb a {
+  text-decoration: none;
+  margin-right: 5px;
+}
+
+.manageAvatar-breadcrumb a.active {
+  color: #E1604D; /* Orange pour Profil */
+  text-decoration: underline;
+}
+
+.manageAvatar-breadcrumb a:hover {
+  text-decoration: underline; /* Souligne sur hover */
 }
